# feature-flag-sweeper

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/feature_flag_sweeper/: __init__.py  __main__.py  cli.py  core.py  rules.py
tests/: test_feature_flag_sweeper.py
